k8s/prod/3-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp
  namespace: prod
spec:
  selector:
    matchLabels:
      app: todoapp
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      containers:
      - name: todoapp
        image: "NEXUS_IP_PLACEHOLDER:5000/todo-app:latest" #change to nexus
        ports:
        - containerPort: 4000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /
            port: 4000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 4000
          initialDelaySeconds: 5
          periodSeconds: 5
      imagePullSecrets:
      - name: nexus-secret
