k8s/prod/4-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-service
  namespace: prod
spec:
  selector:
    app: todoapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4000
  type: ClusterIP
