k8s/prod/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: prod
spec:
  selector:
    app: myapp
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
